# Fizzy: A fast WebAssembly interpreter
# Copyright 2019-2020 The Fizzy Authors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fizzy"
version = "0.9.0-dev"
authors = ["The Fizzy Authors"]
license = "Apache-2.0"
repository = "https://github.com/wasmx/fizzy"
description = "Bindings to Fizzy, a fast, deterministic, and pedantic WebAssembly interpreter."
categories = ["external-ffi-bindings", "webassembly", "wasm", "interpreter"]
edition = "2018"

[dev-dependencies]
hex = "0.4.2"

[build-dependencies]
bindgen = "0.54.0"
cmake = "0.1"

[badges]
circle-ci = { repository = "wasmx/fizzy" }
codecov = { repository = "wasmx/fizzy", service = "github" }
maintenance = { status = "actively-developed" }
